--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "d3": "^5.16.0",
     "d3-scale-chromatic": "^1.5.0",
-    "parcel-bundler": "^1.12.4",
+    "loglevel": "^1.8.0",
+    "parcel-bundler": "^1.3.1",
     "parcel-plugin-static-files-copy": "^2.4.3"
   },
   "devDependencies": {
